# dimble

./: .flake8  .gitignore  Cargo.toml  LICENSE  Makefile  README.md  pyproject.toml  setup.py
.github/workflow/: build.yml
.github/workflows/: build.yml
dimble/: __init__.py  dimble.py
scripts/: _make_eye3s.py  benchmark-analysis.ipynb  brats_to_dimble.py  dcmcat  dcmdiff  dicom_to_dimble.py  dicom_vs_dimble.py  download_testfiles.sh  load_times_variance_visualisation.ipynb  msgcat  nifiti_vs_dimble.py  pyprocs.py  skm_tea_to_dimble.py  to_dimble.py  validate_install  vs_dimble.py
src/: dicom_json.rs  dimble_to_ir.rs  ir_to_dimble.rs  lib.rs  tmp.rs
test/: dicom_baseline_comparisons.py  nifti_baseline_comparisons.py  pydicom_comparisons.py  test_dicom_e2e.py  test_dtypes.py  test_e2e.py  test_nifti_e2e.py  test_sq.py
testfiles/: eye3.safetensors  eye3.safetensors_cat3x
