[package]
name = "dimble"
version = "0.1.0"
edition = "2021"

[lib]
name = "dimble_rs"
crate-type = ["cdylib"]

[dependencies]
base64 = "0.21.0"
clap = { version = "4.1.11", features = ["derive"] }
memmap2 = "0.5.10"
pyo3 = "0.18.1"
rmp = "0.8.11"
rmp-serde = "1.1.1"
rmpv = "1.0.0"
safetensors = "0.3.0"
serde = { version = "1.0.156", features = ["derive"] }
serde_json = "1.0.94"
 